Updated calendar icons. Updated bundle id.

--- a/BloodDonor/BloodDonor-Info.plist
+++ b/BloodDonor/BloodDonor-Info.plist
@@ -31,7 +31,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>ru.itsilver.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>ru.hintsolutions.donor</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -54,7 +54,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>0.1</string>
+	<string>0.2</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIPrerenderedIcon</key>
