--- a/BloodDonor/BloodDonor-Info.plist
+++ b/BloodDonor/BloodDonor-Info.plist
@@ -26,6 +26,8 @@
 				<string>Icon-72.png</string>
 				<string>Icon-72@2x.png</string>
 			</array>
+			<key>UIPrerenderedIcon</key>
+			<true/>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
@@ -54,6 +56,8 @@
 	<key>CFBundleVersion</key>
 	<string>003</string>
 	<key>LSRequiresIPhoneOS</key>
+	<true/>
+	<key>UIPrerenderedIcon</key>
 	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
