--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Libs/MBProgressHUD"]
 	path = Libs/MBProgressHUD
 	url = https://github.com/jdg/MBProgressHUD.git
+[submodule "Libs/Appirater"]
+	path = Libs/Appirater
+	url = https://github.com/arashpayan/appirater.git
