--- a/wp7-donor/Donor/Donor.csproj
+++ b/wp7-donor/Donor/Donor.csproj
@@ -210,7 +210,6 @@
     <Compile Include="StationsSearchFilter.xaml.cs">
       <DependentUpon>StationsSearchFilter.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ViewModels\AchievesViewModel.cs" />
     <Compile Include="ViewModels\AdsViewModel.cs" />
     <Compile Include="ViewModels\BadgesViewModel.cs" />
     <Compile Include="ViewModels\ContraViewModel.cs" />
@@ -394,6 +393,9 @@
     <Content Include="icons\ic_whole_blood.png" />
     <Resource Include="images\donor_enter_logo.png" />
     <Resource Include="images\donor_badge.png" />
+    <Content Include="images\achieves\Achive-donor_firstBlood.png" />
+    <Content Include="images\achieves\Achive-donor_firstBlood_unavailible.png" />
+    <Content Include="images\achieves\Achive-donor_secondBlood_unavailible.png" />
     <Content Include="images\ic_donors_act.png" />
     <Resource Include="images\ic_search.png" />
     <Content Include="libs\Phone.Controls.dll" />
