--- a/wp7-donor/Donor/packages.config
+++ b/wp7-donor/Donor/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BugSense.WP7" version="0.9.9.1" targetFramework="wp71" />
   <package id="Coding4Fun.Phone.Audio" version="1.6.1" />
   <package id="Coding4Fun.Phone.Controls" version="1.6.1" />
   <package id="Coding4Fun.Phone.Controls.Complete" version="1.6.1" />
@@ -8,8 +9,8 @@
   <package id="Coding4Fun.Phone.Storage" version="1.6.1" />
   <package id="Facebook" version="6.1.4" targetFramework="wp71" />
   <package id="MSPToolkit" version="1.7.26.1" />
-  <package id="MyToolkit" version="1.9.0" targetFramework="wp71" />
-  <package id="MyToolkit.Extended" version="1.9.0" targetFramework="wp71" />
+  <package id="MyToolkit" version="1.10.0" targetFramework="wp71" />
+  <package id="MyToolkit.Extended" version="1.10.0" targetFramework="wp71" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="wp71" />
   <package id="parse" version="0.4.2" targetFramework="wp71" />
   <package id="RestSharp" version="104.1" />
