--- a/wp7-donor/Donor/Donor.csproj
+++ b/wp7-donor/Donor/Donor.csproj
@@ -26,7 +26,7 @@
     <ValidateXaml>true</ValidateXaml>
     <ThrowErrorsInValidation>true</ThrowErrorsInValidation>
     <Utf8Output>true</Utf8Output>
-    <ExpressionBlendVersion>4.0.30816.0</ExpressionBlendVersion>
+    <ExpressionBlendVersion>5.0.31017.0</ExpressionBlendVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -182,6 +182,9 @@
     <Compile Include="Controls\VotesControl.xaml.cs">
       <DependentUpon>VotesControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="StationsSearchFilter.xaml.cs">
+      <DependentUpon>StationsSearchFilter.xaml</DependentUpon>
+    </Compile>
     <Compile Include="GenericSortDescriptor.cs" />
     <Compile Include="libs\Converters.cs" />
     <Compile Include="StationPage.xaml.cs">
@@ -242,8 +245,8 @@
     <Compile Include="StationsSearch.xaml.cs">
       <DependentUpon>StationsSearch.xaml</DependentUpon>
     </Compile>
-    <Compile Include="StationsSearchFilter.xaml.cs">
-      <DependentUpon>StationsSearchFilter.xaml</DependentUpon>
+    <Compile Include="StationsSearchFilterOld.xaml.cs">
+      <DependentUpon>StationsSearchFilterOld.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\AdsViewModel.cs" />
     <Compile Include="ViewModels\BadgesViewModel.cs" />
@@ -304,6 +307,10 @@
     <Page Include="Controls\VotesControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="StationsSearchFilter.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="StationPage.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -377,7 +384,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="StationsSearchFilter.xaml">
+    <Page Include="StationsSearchFilterOld.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -390,6 +397,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ApplicationIcon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\AppBar\appbar.feature.camera.rest.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Background.png">
@@ -508,7 +518,6 @@
       <CustomToolNamespace>Donor</CustomToolNamespace>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Silverlight for Phone\$(TargetFrameworkVersion)\Microsoft.Silverlight.$(TargetFrameworkProfile).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Silverlight for Phone\$(TargetFrameworkVersion)\Microsoft.Silverlight.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
