[JIRA: DOI-201] Updated ItsBetaSDK to commit 5f952e1e63d7c960a9156b8eac6189eccd46639b.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "Libs/ChimpKit"]
 	path = Libs/ChimpKit
 	url = https://github.com/mailchimp/ChimpKit2.git
+[submodule "Libs/ItsBetaSDK"]
+	path = Libs/ItsBetaSDK
+	url = https://github.com/HintSoluitons/itsbeta-sdk.git
