[Windows8] Map page

--- a/w8-donor/DonorAppW8/DonorAppW8.csproj
+++ b/w8-donor/DonorAppW8/DonorAppW8.csproj
@@ -124,6 +124,9 @@
       <DependentUpon>AdDetailPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="MyDataTemplateSelector.cs" />
+    <Compile Include="Pages\Map\MapPage.xaml.cs">
+      <DependentUpon>MapPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\News\NewsDetailPage.xaml.cs">
       <DependentUpon>NewsDetailPage.xaml</DependentUpon>
     </Compile>
@@ -175,6 +178,10 @@
     <Content Include="Assets\LightGray.png" />
     <Content Include="Assets\MediumGray.png" />
     <Content Include="Assets\DarkGray.png" />
+    <Page Include="Pages\Map\MapPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Controls\About.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -261,7 +268,6 @@
     </PRIResource>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Pages\Map\" />
     <Folder Include="Pages\User\" />
   </ItemGroup>
   <ItemGroup>
