--- a/w8-donor/DonorAppW8/DonorAppW8.csproj
+++ b/w8-donor/DonorAppW8/DonorAppW8.csproj
@@ -139,6 +139,9 @@
     <Compile Include="Pages\Stations\StationsGroupDetailPage.xaml.cs">
       <DependentUpon>StationsGroupDetailPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\Stations\RegionSelectPage.xaml.cs">
+      <DependentUpon>RegionSelectPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\BindableBase.cs" />
     <Compile Include="Common\BooleanToVisibilityConverter.cs" />
@@ -178,6 +181,10 @@
     <Content Include="Assets\LightGray.png" />
     <Content Include="Assets\MediumGray.png" />
     <Content Include="Assets\DarkGray.png" />
+    <Page Include="Pages\Stations\RegionSelectPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Pages\Map\MapPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
