--- a/w8-donor/DonorAppW8/DonorAppW8.csproj
+++ b/w8-donor/DonorAppW8/DonorAppW8.csproj
@@ -158,6 +158,7 @@
       <CustomToolNamespace>DonorAppW8</CustomToolNamespace>
     </Compile>
     <Compile Include="ViewModel\Ads\AdsViewModel.cs" />
+    <Compile Include="ViewModel\Contras\ContrasViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\News\NewsViewModel.cs" />
     <Compile Include="ViewModel\Stations\StationViewModel.cs" />
@@ -173,6 +174,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="appicon.png" />
+    <Content Include="Assets\donor_news_images %281%29.jpg" />
+    <Content Include="Assets\donor_news_images %282%29.jpg" />
+    <Content Include="Assets\donor_news_images %283%29.jpg" />
+    <Content Include="Assets\donor_news_images %284%29.jpg" />
+    <Content Include="Assets\donor_news_images %285%29.jpg" />
+    <Content Include="Assets\donor_news_images %286%29.jpg" />
     <Content Include="Assets\Logo.png" />
     <Content Include="Assets\logo_header.png" />
     <Content Include="Assets\SmallLogo.png" />
@@ -275,6 +282,7 @@
     </PRIResource>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Pages\Help\" />
     <Folder Include="Pages\User\" />
   </ItemGroup>
   <ItemGroup>
