--- a/Donor/Donor-Info.plist
+++ b/Donor/Donor-Info.plist
@@ -39,7 +39,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.4</string>
+	<string>1.5</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -60,9 +60,17 @@
 				<string>donor</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string></string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>donorapp.ru</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>028</string>
+	<string>029</string>
 	<key>FacebookAppID</key>
 	<string>438918122827407</string>
 	<key>LSRequiresIPhoneOS</key>
