[JIRA: DOI-216] Added intercative button (PizzaBtn).

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "Libs/ItsBetaSDK"]
 	path = Libs/ItsBetaSDK
 	url = https://github.com/HintSoluitons/itsbeta-sdk.git
+[submodule "Libs/PizzaBtn"]
+	path = Libs/PizzaBtn
+	url = https://github.com/pizzabtn/pizzabtn-ios.git
